Updating float buton

--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1IN-VO-srw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -122,6 +122,16 @@
                                     <segue destination="yqZ-QZ-PIh" kind="unwind" unwindAction="unwindToMain:" id="ogS-nV-Ap0"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfr-bY-Z8N">
+                                <rect key="frame" x="313" y="28" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="1IN-VO-srw" kind="modal" id="D1J-o2-v3q"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -146,6 +156,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yllw" translatesAutoresizingMaskIntoConstraints="NO" id="eG6-9A-tWG">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gnu-5l-CbO">
+                                <rect key="frame" x="162" y="423" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Three" image="pencil">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
                             <button opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YqI-OH-rT3">
                                 <rect key="frame" x="241" y="482" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -160,9 +180,12 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pe1-41-3QD">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pe1-41-3QD">
                                 <rect key="frame" x="152" y="557" width="70" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="RYa-Vl-qYa"/>
+                                    <constraint firstAttribute="height" constant="70" id="v02-wt-pfs"/>
+                                </constraints>
                                 <state key="normal" title="One" image="up">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -170,15 +193,27 @@
                                     <action selector="showButtons:" destination="1IN-VO-srw" eventType="touchUpInside" id="Xmd-5U-Zwm"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gnu-5l-CbO">
-                                <rect key="frame" x="162" y="423" width="50" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1o5-W5-mhR">
+                                <rect key="frame" x="22" y="20" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Three" image="pencil">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="qKU-gD-VmL" kind="unwind" unwindAction="unwindToSecond:" id="q5h-va-ttG"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="pe1-41-3QD" secondAttribute="trailing" constant="153" id="7iG-8S-UAi"/>
+                            <constraint firstItem="eG6-9A-tWG" firstAttribute="leading" secondItem="ST6-Cg-Yfn" secondAttribute="leading" id="K7q-NF-pTA"/>
+                            <constraint firstItem="UyX-VN-AIr" firstAttribute="top" secondItem="eG6-9A-tWG" secondAttribute="bottom" id="YWs-V3-LJZ"/>
+                            <constraint firstAttribute="trailing" secondItem="eG6-9A-tWG" secondAttribute="trailing" id="dAI-ST-i3J"/>
+                            <constraint firstItem="pe1-41-3QD" firstAttribute="leading" secondItem="ST6-Cg-Yfn" secondAttribute="leading" constant="152" id="gyD-2n-EdH"/>
+                            <constraint firstItem="pe1-41-3QD" firstAttribute="top" secondItem="eG6-9A-tWG" secondAttribute="bottom" constant="-110" id="rDd-DI-hWi"/>
+                            <constraint firstItem="eG6-9A-tWG" firstAttribute="top" secondItem="ST6-Cg-Yfn" secondAttribute="top" id="wgs-wd-NSR"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="fourBtn" destination="YqI-OH-rT3" id="Qnz-ml-XIs"/>
@@ -188,6 +223,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nht-yf-MCZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="qKU-gD-VmL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1655.2" y="138.98050974512745"/>
         </scene>
@@ -198,5 +234,6 @@
         <image name="pencil" width="400" height="400"/>
         <image name="stars" width="512" height="512"/>
         <image name="up" width="256" height="256"/>
+        <image name="yllw" width="750" height="1334"/>
     </resources>
 </document>
