--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nva-lP-KcL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -203,6 +203,16 @@
                                     <segue destination="qKU-gD-VmL" kind="unwind" unwindAction="unwindToSecond:" id="q5h-va-ttG"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9iG-9k-u0h">
+                                <rect key="frame" x="313" y="28" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="nva-lP-KcL" kind="modal" id="P1h-m4-Yes"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -239,10 +249,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VRy-bt-8VZ">
-                                <rect key="frame" x="101" y="306" width="172" height="55"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wllApple" translatesAutoresizingMaskIntoConstraints="NO" id="vnw-Pc-yzi">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="icL-di-UX9">
+                                <rect key="frame" x="16" y="20" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="xaQ-UN-dgE" kind="unwind" unwindAction="unwindToThird:" id="W3d-pF-SQ8"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VRy-bt-8VZ">
+                                <rect key="frame" x="101" y="365" width="172" height="55"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="172" id="8jF-FZ-hY3"/>
+                                    <constraint firstAttribute="height" constant="55" id="Bin-hy-UNp"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="ZapfDingbatsITC" family="Zapf Dingbats" pointSize="37"/>
                                 <state key="normal" title="Go">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -253,9 +279,18 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vnw-Pc-yzi" firstAttribute="leading" secondItem="Tgc-6q-xF7" secondAttribute="leading" id="4sD-Db-QBN"/>
+                            <constraint firstAttribute="trailing" secondItem="vnw-Pc-yzi" secondAttribute="trailing" id="Puh-JT-hHB"/>
+                            <constraint firstItem="VRy-bt-8VZ" firstAttribute="centerX" secondItem="Tgc-6q-xF7" secondAttribute="centerX" id="RQJ-PT-jKc"/>
+                            <constraint firstItem="vnw-Pc-yzi" firstAttribute="top" secondItem="Tgc-6q-xF7" secondAttribute="top" id="Sh7-CU-HrP"/>
+                            <constraint firstItem="9jb-Yl-49d" firstAttribute="top" secondItem="vnw-Pc-yzi" secondAttribute="bottom" id="aQQ-Lo-jGh"/>
+                            <constraint firstItem="VRy-bt-8VZ" firstAttribute="centerY" secondItem="Tgc-6q-xF7" secondAttribute="centerY" constant="59" id="bUh-5Q-LGP"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3hs-bb-GFM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="xaQ-UN-dgE" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2519.1999999999998" y="142.57871064467767"/>
         </scene>
@@ -266,6 +301,7 @@
         <image name="pencil" width="400" height="400"/>
         <image name="stars" width="512" height="512"/>
         <image name="up" width="256" height="256"/>
+        <image name="wllApple" width="890" height="1590"/>
         <image name="yllw" width="750" height="1334"/>
     </resources>
 </document>
