--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="KhM-SV-ALd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -142,7 +142,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qor-Rd-9Bv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="yqZ-QZ-PIh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="874" y="139"/>
+            <point key="canvasLocation" x="903" y="139"/>
         </scene>
         <!--Third Table View Controller-->
         <scene sceneID="l1x-eJ-bw1">
@@ -292,7 +292,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3hs-bb-GFM" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="xaQ-UN-dgE" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2519.1999999999998" y="142.57871064467767"/>
+            <point key="canvasLocation" x="2415" y="139"/>
+        </scene>
+        <!--Five Table View Controller-->
+        <scene sceneID="jAQ-0L-Zom">
+            <objects>
+                <tableViewController id="KhM-SV-ALd" customClass="FiveTableViewController" customModule="animationsGif" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="ULp-jh-OUf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="bXJ-b3-96h">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bXJ-b3-96h" id="8Vl-Bz-12I">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="KhM-SV-ALd" id="i17-tU-PsI"/>
+                            <outlet property="delegate" destination="KhM-SV-ALd" id="AsC-cb-teh"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kAu-tc-aKg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3182" y="139"/>
         </scene>
     </scenes>
     <resources>
