--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cZT-cM-kpI">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -415,6 +415,45 @@
             </objects>
             <point key="canvasLocation" x="4157.6000000000004" y="123.68815592203899"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="mpj-ch-3bT">
+            <objects>
+                <viewController id="cZT-cM-kpI" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HYF-k9-xKy"/>
+                        <viewControllerLayoutGuide type="bottom" id="pBA-Jk-sbU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eGo-Wi-JGl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="night" translatesAutoresizingMaskIntoConstraints="NO" id="oRh-MI-CHt">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="monkey" translatesAutoresizingMaskIntoConstraints="NO" id="slL-QR-iB7">
+                                <rect key="frame" x="67" y="418" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pBA-Jk-sbU" firstAttribute="top" secondItem="slL-QR-iB7" secondAttribute="bottom" constant="121" id="5KY-Pl-lvi"/>
+                            <constraint firstItem="slL-QR-iB7" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" constant="67" id="CK4-ew-gbJ"/>
+                            <constraint firstAttribute="trailing" secondItem="slL-QR-iB7" secondAttribute="trailing" constant="68" id="EXB-pT-axk"/>
+                            <constraint firstItem="oRh-MI-CHt" firstAttribute="top" secondItem="eGo-Wi-JGl" secondAttribute="top" id="V9k-Fy-jJC"/>
+                            <constraint firstItem="slL-QR-iB7" firstAttribute="centerX" secondItem="oRh-MI-CHt" secondAttribute="centerX" id="Z2d-jk-cKj"/>
+                            <constraint firstAttribute="trailing" secondItem="slL-QR-iB7" secondAttribute="trailing" constant="68" id="lWS-sk-Jc8"/>
+                            <constraint firstAttribute="trailing" secondItem="oRh-MI-CHt" secondAttribute="trailing" id="mRB-Yx-IUN"/>
+                            <constraint firstItem="slL-QR-iB7" firstAttribute="top" secondItem="oRh-MI-CHt" secondAttribute="bottom" constant="-249" id="rVG-7n-iIe"/>
+                            <constraint firstItem="pBA-Jk-sbU" firstAttribute="top" secondItem="oRh-MI-CHt" secondAttribute="bottom" id="s45-aY-xR8"/>
+                            <constraint firstItem="slL-QR-iB7" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" constant="67" id="t7A-BT-0uJ"/>
+                            <constraint firstItem="oRh-MI-CHt" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" id="vjA-7W-zNm"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pXs-NU-HpG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5013.6000000000004" y="123.68815592203899"/>
+        </scene>
         <!--Six One View Controller-->
         <scene sceneID="b7C-IZ-9rU">
             <objects>
@@ -465,6 +504,8 @@
         <image name="0.gif" width="800" height="800"/>
         <image name="book" width="400" height="400"/>
         <image name="mazinger_z" width="1760" height="1004"/>
+        <image name="monkey" width="640" height="413"/>
+        <image name="night" width="2048" height="2048"/>
         <image name="pencil" width="400" height="400"/>
         <image name="stars" width="512" height="512"/>
         <image name="up" width="256" height="256"/>
